# serializer version: 1
# name: test_edit_yak_get
  '''
  <!DOCTYPE html>
  <html lang="en">
   <head>
    <meta charset="utf-8"/>
    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
    <title>
     Editing test.dj
    </title>
    <link href="/static/css/main.css" rel="stylesheet"/>
    <script src="/static/js/htmx.min.js">
    </script>
    <link href="/static/css/prism.min.css" rel="stylesheet"/>
    <script src="https://unpkg.com/@djot/djot@0.3.2/dist/djot.js">
    </script>
    <script src="/static/js/codejar.min.js">
    </script>
    <script src="/static/js/highlight.js">
    </script>
    <script src="/static/js/prism.min.js">
    </script>
   </head>
   <body class="layout">
    <a class="skip-link" href="#main-content">
     Skip to main content
    </a>
    <header class="header" role="banner">
     <div class="container">
      <div class="header__bar">
       <a aria-label="Yak Shears home" class="brand" href="/yaks">
        <div aria-hidden="true" class="brand__logo">
         YS
        </div>
        <span>
         Yak Shears
        </span>
       </a>
       <div class="header__center">
        <span>
         Editing: test.dj (Root)
        </span>
       </div>
       <nav aria-label="Main navigation" role="navigation">
        <ul class="nav__list">
         <li>
          <a class="nav__link" href="/yaks">
           Yaks
          </a>
         </li>
         <li>
          <a class="nav__link" href="/search">
           Search
          </a>
         </li>
         <li>
          <a class="nav__link" href="/new">
           New
          </a>
         </li>
        </ul>
       </nav>
      </div>
     </div>
    </header>
    <main class="layout__inner" id="main-content" role="main">
     <div class="container">
      <div class="editor-layout">
       <div class="editor-main">
        <div class="editor__header">
         <div class="view-toggle">
          <button class="button button--sm" data-view="editor" id="editor-only-btn">
           Editor
          </button>
          <button class="button button--sm" data-view="side-by-side" id="side-by-side-btn">
           Side-by-Side
          </button>
          <button class="button button--sm" data-view="preview" id="preview-only-btn">
           Preview
          </button>
         </div>
        </div>
        <div class="editor-container" id="editor-container">
         <form id="editor_form" method="post">
          <input name="yak" type="hidden" value="test.dj"/>
          <div class="editor" data-gramm="false" data-manual="">
          </div>
         </form>
         <div class="preview" id="preview">
          <div class="preview-content" id="preview-content">
          </div>
         </div>
        </div>
        <div class="editor__actions">
         <div class="container">
          <button class="button button--primary" hx-post="/edit" hx-swap="none" hx-vals="js:{content: getEditorContent(), yak: 'test.dj'}" id="save-btn">
           Save Changes
          </button>
          <button class="button button--danger" hx-confirm="Are you sure you want to delete this yak? This action cannot be undone." hx-post="/delete" hx-vals="js:{yak: 'test.dj'}">
           Delete Yak
          </button>
          <span class="editor__status" id="save-status">
          </span>
         </div>
        </div>
       </div>
       <aside class="metadata-panel">
        <section class="metadata-section">
         <h3 class="metadata-section__title">
          🔗 Backlinks
         </h3>
         <p class="metadata-empty">
          No backlinks
         </p>
        </section>
        <section class="metadata-section">
         <h3 class="metadata-section__title">
          📊 Statistics
         </h3>
         <div class="stats-grid">
          <div class="stat-item">
           <div class="stat-item__label">
            Backlinks
           </div>
           <div class="stat-item__value">
            0
           </div>
          </div>
          <div class="stat-item">
           <div class="stat-item__label">
            Category
           </div>
           <div class="stat-item__value">
            Root
           </div>
          </div>
         </div>
        </section>
       </aside>
      </div>
     </div>
    </main>
    <script>
     window.serverContent = "Test yak content";
    </script>
    <script src="/static/js/editor.js" type="module">
    </script>
   </body>
  </html>
  
  '''
# ---
# name: test_yaks_endpoint
  '''
  <!DOCTYPE html>
  <html lang="en">
   <head>
    <meta charset="utf-8"/>
    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
    <title>
     Yaks in ./test_data/mock_djot_dir_0
    </title>
    <link href="/static/css/main.css" rel="stylesheet"/>
    <script src="/static/js/htmx.min.js">
    </script>
   </head>
   <body class="layout">
    <a class="skip-link" href="#main-content">
     Skip to main content
    </a>
    <header class="header" role="banner">
     <div class="container">
      <div class="header__bar">
       <a aria-label="Yak Shears home" class="brand" href="/yaks">
        <div aria-hidden="true" class="brand__logo">
         YS
        </div>
        <span>
         Yak Shears
        </span>
       </a>
       <div class="header__center">
       </div>
       <nav aria-label="Main navigation" role="navigation">
        <ul class="nav__list">
         <li>
          <a aria-current="page" class="nav__link nav__link--active" href="/yaks">
           Yaks
          </a>
         </li>
         <li>
          <a class="nav__link" href="/search">
           Search
          </a>
         </li>
         <li>
          <a class="nav__link" href="/new">
           New
          </a>
         </li>
        </ul>
       </nav>
      </div>
     </div>
    </header>
    <main class="layout__inner" id="main-content" role="main">
     <div class="container">
      <h1>
       Yaks in ./test_data/mock_djot_dir_0
      </h1>
      <p class="page-info">
       Showing 3 of 3 yaks (Page 1 of 1)
      </p>
      <div class="sort-controls">
       <span class="sort-controls__label">
        Sort by:
       </span>
       <a class="button button--sm button--primary" href="/yaks?sort_by=name">
        Name (Created At)
       </a>
       <a class="button button--sm" href="/yaks?sort_by=modified_date">
        Modified Date
       </a>
      </div>
      <div class="filter-controls">
       <span class="filter-controls__label">
        Filter by category:
       </span>
       <a class="button button--sm button--primary" href="/yaks?sort_by=name">
        All
       </a>
       <a class="button button--sm" href="/yaks?sort_by=name&amp;category=mock_djot_dir_0">
        Mock_djot_dir_0
       </a>
       <a class="button button--sm" href="/yaks?sort_by=name&amp;category=subdirectory-2">
        Subdirectory-2
       </a>
       <a class="button button--sm" href="/yaks?sort_by=name&amp;category=subdirectory-3">
        Subdirectory-3
       </a>
      </div>
      <div class="cards">
       <a class="card" href="/edit?yak=subdirectory-3/yak3.dj" style="--card-accent-color: hsl(327, 6%, 88%)">
        <div class="card__body">
         <p>
          # Yak 3  This is a test yak number 3  Unrelated to yak 1 or yak 2
         </p>
        </div>
        <div class="card__tooltip">
         Subdirectory-3
         <br/>
         C: yak3.dj
         <br/>
         M: 2025-05-01 10:00:00
        </div>
       </a>
       <a class="card" href="/edit?yak=subdirectory-2/yak2.dj" style="--card-accent-color: hsl(326, 6%, 88%)">
        <div class="card__body">
         <p>
          # Yak 2  &lt;https://www.ecosia.org/search?method=index&amp;q=yak&gt;  This is a test yak number 2
         </p>
        </div>
        <div class="card__tooltip">
         Subdirectory-2
         <br/>
         C: yak2.dj
         <br/>
         M: 2025-05-01 10:00:00
        </div>
       </a>
       <a class="card" href="/edit?yak=yak1.dj" style="--card-accent-color: hsl(71, 6%, 88%)">
        <div class="card__body">
         <p>
          # Yak 1  &lt;https://www.ecosia.org/search?method=index&amp;q=yak&gt;  This is a test yak number 1
         </p>
        </div>
        <div class="card__tooltip">
         Mock_djot_dir_0
         <br/>
         C: yak1.dj
         <br/>
         M: 2025-05-01 10:00:00
        </div>
       </a>
      </div>
     </div>
    </main>
   </body>
  </html>
  
  '''
# ---
